--- a/PrinterManager/PrinterManager.csproj
+++ b/PrinterManager/PrinterManager.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
+    <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
